# VisionQuantPlayground

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  train.sh
.cursor/rules/: docstring-best-practices.mdc  mypy-best-practices.mdc  python-best-practices.mdc
config/: config.yaml
config/arch/: convnext.yaml  dinov2.yaml  efficientnet_b0.yaml  efficientnet_b1.yaml  efficientnet_b2.yaml  efficientnet_b3.yaml  efficientnet_b4.yaml  efficientnet_b5.yaml  efficientnet_b6.yaml  efficientnet_b7.yaml  mobilenet_v2.yaml  mobilenetv2.yaml  resnet101.yaml  resnet50.yaml
src/: MlflowExperimentManager.py  MlflowWriter.py  datasets.py  download.py  download_food101.py  main.py  mobilenet_v2.py  reproducibility.py  resnet.py  train.py  train_val.py  utils.py
src/data/: dataloader.py  datasets.py  transforms.py
src/model/: timm_model_builder.py
src/monitoring/: MlflowExperimentManager.py  metrics_tracker.py
src/training/: metrics.py  trainer.py
src/utils/: reproducibility.py  torch_compile.py
