[project]
name = "visionquantplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.5",
    "efficientnet-pytorch>=0.7.1",
    "hydra-core>=1.3.2",
    "mlflow>=2.21.3",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "pyyaml>=6.0.2",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "mdformat==0.7.21",
    "mdformat-footnote==0.1.1",
    "mdformat-frontmatter==2.0.8",
    "mdformat-gfm==0.4.1",
    "types-pyyaml>=6.0.12.20250402",
]

